# build-llm-apps

./: .gitignore  README.md
day1/: README.md  day1-笔记.md
day1/code/: 1.情感分析.py  2.天气function-call.py  3.提取图片表格数据.py  4.运维事件处理tool-call.py  5.deepseek 联网搜索.py  6.openai 联网搜索.py  requirements.txt
day10/: README.md  day10.md  pyproject.toml  requirements.txt
day10/code/1.私募基金运作指引问答助手（反应式）/: 0.私募合规问答智能体-旧.py  1.私募合规问答智能体.py  2.私募合规问答智能体LangGraph.py
day10/code/2.smart-research-deliberative/: 0.深思熟虑投研智能体-旧.py  2.深思熟虑投研千问智能体-旧.py  3.深思熟虑投研千问智能体.py  深思熟虑智能体架构详解.html  研报_固态电池技术突破_20260311_004505.md  研报_新能源汽车行业投资机_20260311_010454.md
day10/code/2.智能投研助手（深思熟虑）/: 1.深思熟虑投研智能体LangGraph.py  研报_固态电池技术突破_20260311_004505.html
day10/code/3.hybrid-advisor-ai/: 0.混合架构财富投顾-旧.py
day10/code/3.投顾AI助手（混合式）/: 1.混合架构财富投顾.py  1.混合架构财富投顾.txt  2.混合架构财富投顾-2.txt
day11/: README.md  day11.md  pyproject.toml  requirements.txt
day11/code/1.VL模型在保险行业的应用/: 1.保险_VLM_批量图片分析.py  2.通义VL_本地图片内容识别.py  3.通义VL_多轮对话与定位检测演示.py  prompt_template_cn_result.xlsx
day11/code/1.VL模型在保险行业的应用/files/: prompt_template_en_result.xlsx
day11/code/2.VL模型对视频的应用/: 1.InternVL2.5_视频损伤分析与多轮对话.py  2.QwenVL_视频损伤分析与多轮对话.py  3.QwenVL_多模型轮询_视频损伤分析.py  requirements.txt
day11/code/3.MinerU在文档中的应用/: 1.本地使用MinerU.py  2.API使用MinnerU.py
day12/: README.md  day12.md  pyproject.toml  requirements.txt
day12/code/: 1.ALS矩阵分解推荐系统.py  2.SVD图像压缩与还原.py
day13/: day13.md  pyproject.toml
day2/:  day2.md  README.md
day2/code/: 1.推理型模型.py  2.提示词工程.py  3.使用本地模型_transformers.py  4.使用本地模型_ollama.py  5.1.fastapi-ollama_客户端.py  5.fastapi-ollama.py  requirements.txt
day3/:  day3-1.md  summary.md
day3/code/1.excel_merge_cursor/: merge_2024_performance.py  merge_excel.py  prompt.md  read_excel.py  员工2024年绩效表.xlsx  员工基本信息及Q4绩效表.xlsx
day3/code/1.excel_merge_trae/: merge_excel_2024_all_quarters.py  merge_excel_q4.py  prompt.md  read_excel.py  员工2024年绩效表.xlsx  员工Q4绩效表.xlsx
day3/code/2.dashboard_epidemic_cursor/: app.py  plot_districts_new_cases.py  plot_new_cases.py  prompt.md  read_excel.py  requirements.txt
day3/code/2.dashboard_epidemic_lingma/: app.py  plot_new_cases_trend.py  plot_regions_new_cases.py  prompt.md  read_first_20_rows.py  requirements.txt
day3/code/2.dashboard_epidemic_trae/: app.py  check_all_districts.py  check_geojson.py  plot_trend.py  plot_trend_by_district.py  prompt.md  read_data.py
day3/code/3.hospital_bed_usage/: analyze_bed_usage.py  dashboard.py  data_description.md  hospital_department_bed_usage_summary.xlsx  prompt.md  read_data.py  requirements.txt
day4/:  day4-1.md  README.md
day4/code/: requirements.txt
day4/code/1.酒店推荐/: hotel_rec.py
day4/code/3.向量数据库/: 1-embeding 计算.py  2-embedding-faiss-元数据.py  3-save-to-faiss-持久化.py  4-query-from-faiss-本地库.py  5-save-to-faiss-模拟大数据.py  6-query-from-faiss-模拟大数据.py  README.md
day5/: requirements.txt
day5/day5-1/:  day5-1.md  README.md  requirements.txt
day5/day5-2/:  day5-2.md  README.md
day6/:  day6.md  README.md  requirements.txt
day6/code/1.sql-compilot/: 1.用Chat模型来写SQL查询.py  1.用Chat模型来写SQL查询.txt  2.用Coder模型来写SQL查询.py  2.用Coder模型来写SQL查询.txt  3.两种模型写SQL查询的结果评测.py  3.两种模型写SQL查询的结果评测.txt
day6/code/2.sql-langchain/: 1.langchain-sql_agent-deepseek.py  1.langchain-sql_agent-deepseek.txt  1.langchain-sql_agent-健康险.py  2.langchain-sql_agent-健康险.py  2.langchain-sql_agent-健康险.txt
day6/code/3.sql-vanna/: 1.vanna-mysql-base-persistent.py  2.vanna-mysql-web.py
day7/: README.md  day7.md  requirements.txt
day7/code/1.langchian-use/: 1.LLM和提示词模版.py  1.LLM和提示词模版.txt  2.LLM和Agent_tools-serpapi.py  2.LLM和Agent_tools-serpapi.txt  3.LLM和Agent_tools-llm-math.py  3.LLM和Agent_tools-llm-math.txt  4.保留多伦对话的记忆.py  4.保留多伦对话的记忆.txt  5.模拟特斯拉智能助手.py
day7/code/2.langchain-tool-composite/: 0.声明式链式表达语法LCEL.py  0.声明式链式表达语法LCEL.txt  1.多功能文本与数据处理Agent-基础自主.py  1.多功能文本与数据处理Agent-基础自主.txt  2.多功能文本与数据处理Agent-手动调度.py  2.多功能文本与数据处理Agent-手动调度.txt  3.多功能文本与数据处理Agent-高级自主.py  3.多功能文本与数据处理Agent-高级自主.txt
day7/code/3.network-fault-diagnosis-agent/: 1.网络故障诊断智能助手.py  1.网络故障诊断智能助手.txt  2.高级网络故障诊断智能助手.py
day8/: README.md  day8.md  requirements.txt
day8/code/2.qwen-agent/: 1.单模天气对话助手.py  (+1 more)
day9/: README.md  day9.md  requirements.txt
(+81 files in other folders)
